--- a/src/RawLogImporter/RawLogImporter/RawLogManager.csproj
+++ b/src/RawLogImporter/RawLogImporter/RawLogManager.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.11.0-dev-01371" />
+  </ItemGroup>
+
 </Project>
