--- a/src/RawLogImporter/LogImporterExample/Console.csproj
+++ b/src/RawLogImporter/LogImporterExample/Console.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog" Version="2.11.0-dev-01371" />
+    <ProjectReference Include="..\RawLogImporter\LogChugger.csproj" />
   </ItemGroup>
 
 </Project>
