Update settings file and remove unused settings read.

--- a/src/RawLogImporter/LogImporterExample/settings.json
+++ b/src/RawLogImporter/LogImporterExample/settings.json
@@ -1,5 +1,8 @@
 {
   "DelayImportScheduler": {
     "ImportDelay": "00:00:30"
+  },
+  "MySqlMetadataRepository": {
+    "ConnectionString": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;"
   }
 }
