--- a/src/RawLogImporter/LogImporterExample/settings.json
+++ b/src/RawLogImporter/LogImporterExample/settings.json
@@ -1,8 +1,12 @@
 {
   "DelayImportScheduler": {
-    "ImportDelay": "00:00:30"
+    "ImportDelay": "00:01:00"
   },
   "MySqlMetadataRepository": {
     "ConnectionString": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;"
+  },
+  "LogsTFApiPolicer": {
+    "BurstRequestLimit": 5,
+    "AverageRequestInterval": "00:00:10"
   }
 }
