Add disk log repo settings.

--- a/src/RawLogImporter/LogImporterExample/settings.json
+++ b/src/RawLogImporter/LogImporterExample/settings.json
@@ -8,5 +8,8 @@
   "LogsTFApiPolicer": {
     "BurstRequestLimit": 5,
     "AverageRequestInterval": "00:00:10"
+  },
+  "DiskLogRepository": {
+    "LogsDirectoryPath": "logs"
   }
 }
