Add dual log importer settings.

--- a/src/RawLogImporter/LogImporterExample/settings.json
+++ b/src/RawLogImporter/LogImporterExample/settings.json
@@ -11,5 +11,8 @@
   },
   "DiskLogRepository": {
     "LogsDirectoryPath": "logs"
+  },
+  "DualLogImporter": {
+    "DuplicateCheckHashAlgorithm": "SHA256"
   }
 }
