--- a/.gitignore
+++ b/.gitignore
@@ -348,4 +348,4 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
-src/RawLogImporter/LogImporterExample/settings.dev.json
+settings.json
