--- a/src/RawLogImporter/Console/Console.csproj
+++ b/src/RawLogImporter/Console/Console.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Serilog" Version="2.11.0-dev-01371" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10289" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1-dev-00876" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
   </ItemGroup>
 
   <ItemGroup>
